# Language

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NEXT_STEPS_FOR_COPILOT.md  README.md
.github/workflows/: contract-lock.yml  flutter-ci.yml  python-ci.yml  release.yml  rust-ci.yml
apps/client/: README.md
apps/field_app_flutter/: README.md  analysis_options.yaml  pubspec.yaml
crates/audio_core/: Cargo.toml  README.md
crates/audio_core/src/: ids.rs  lib.rs  priority.rs  session.rs  speaker.rs
crates/focus_engine/: Cargo.toml  README.md
crates/focus_engine/src/: lib.rs
crates/focus_engine/testdata/: prioritization_vectors.tsv
crates/focus_engine/tests/: prioritization_parity.rs
crates/session_proto/: Cargo.toml  README.md  build.rs
crates/session_proto/src/: lib.rs
docker/dev/: Dockerfile.audio-eval  Dockerfile.audio-eval-pyannote  Dockerfile.audio-eval-sortformer  Dockerfile.audio-eval-speechbrain-sepformer  Dockerfile.audio-eval-wesep  Dockerfile.audio-eval-whisper  Dockerfile.core  compose.yml  (+6 more)
proto/: session.proto
research/: language_stack_questions.json
scripts/: audio_eval_check.sh  audio_eval_harness.py  benchmark_chunked_diarization_fixture.py  benchmark_diarization_fixture.py  benchmark_enrolled_tse_fixture.py  benchmark_fallback_tts_fixture.py  benchmark_live_capture_fixture.py  benchmark_playback_suppression_fixture.py  benchmark_same_voice_candidate_fixture.py  benchmark_target_speaker_extraction_fixture.py  benchmark_translation_fixture.py  bootstrap_dev.sh  check_audio_corpus_catalog.py  check_local.ps1  check_release_checklist.py  dev_container.ps1  dev_container_check.sh  generate_contract_bindings.py  headphone_isolation_local.ps1  headphone_route_triage_handoff.py  package_local.ps1  prepare_crowd_noise_fixture.py  prepare_real_speech_fixture.py  prepare_robin_research_pack.py  release_audio_gate.py  release_audio_status.py  release_progress.py  run_audio_contract.py  run_headphone_isolation_check.py  run_live_microphone_capture.py  run_pyannote_chunked_real_speech_fixture.py  run_pyannote_diarization_fixture.py  run_pyannote_real_speech_fixture.py  run_real_room_playback_suppression.py  run_sortformer_chunked_real_speech_fixture.py  run_sortformer_online_real_speech_fixture.py  run_sortformer_real_speech_fixture.py  run_sortformer_rolling_fleurs_fixture.py  run_sortformer_rolling_real_speech_fixture.py  run_speechbrain_sepformer_tse_fixture.py  (+14 more)
services/gateway/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt
services/gateway/app/: __init__.py  auth.py  cli.py  config.py  main.py  models.py  observability.py
services/gateway/app/routes/: __init__.py  events.py  health.py  ingest.py  mock.py  sessions.py  speakers.py
services/gateway/app/services/: __init__.py  diarization.py  mock_events.py  mock_live_ingest.py  prioritizer.py  session_persistence.py  session_store.py  translation.py
services/gateway/language_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gateway/tests/: test_api.py  test_cli.py  test_gateway.py
(+61 files in other folders)
