[package]
name = "focus_engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deterministic speaker-ranking policy built on top of audio_core"
readme = "README.md"
repository = "https://github.com/Donovoi/Language"
keywords = ["audio", "focus", "ranking", "speaker"]
categories = ["algorithms", "multimedia::audio"]

[lib]
path = "src/lib.rs"

[dependencies]
audio_core = { path = "../audio_core" }
