[package]
name = "session_proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generated protobuf transport bindings and Rust domain conversions for Language"
readme = "README.md"
repository = "https://github.com/Donovoi/Language"
keywords = ["protobuf", "language", "session", "transport"]
categories = ["encoding", "multimedia::audio"]
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
audio_core = { path = "../audio_core" }
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
